--- a/OtherTest/HttpTest.xaml
+++ b/OtherTest/HttpTest.xaml
@@ -7,7 +7,9 @@
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     mc:Ignorable="d">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-
-    </Grid>
+    <StackPanel Background="Wheat">
+        <TextBox Height="40" Width="50" Margin="20"/>
+        <Button Height="30" Width="50" HorizontalAlignment="Center" Margin="10" Click="Button_Click"/>
+        <TextBox x:Name="txtResult" />
+    </StackPanel>
 </Page>
