--- a/Demo_Test/Main.xaml
+++ b/Demo_Test/Main.xaml
@@ -200,7 +200,7 @@
                             </StackPanel>
                         </Grid>
                         <Grid Grid.Row="1" VerticalAlignment="Top" HorizontalAlignment="Right">
-                            <Border x:Name="NotifyUser" BorderThickness="1.5" BorderBrush="SkyBlue" CornerRadius="18 0 0 18" HorizontalAlignment="Right" Margin="0 30"  Background="{Binding themeColorModelSettings.ArticleFontBodyBackGroundColor}" Height="42" Width="0" >
+                            <Border x:Name="NotifyUser" BorderThickness="1.5" BorderBrush="Orange" CornerRadius="18 0 0 18" HorizontalAlignment="Right" Margin="0 30"  Background="{Binding themeColorModelSettings.ArticleFontBodyBackGroundColor}" Height="42" Width="0">
                                 <TextBlock x:Name="NotifyUserText" HorizontalAlignment="Center" Foreground="White" VerticalAlignment="Center" FontFamily="Consolas"/>
                             </Border>
                         </Grid>
@@ -240,7 +240,7 @@
                 </StackPanel>
             </Border>
         </Grid>
-        <Rectangle x:Name="DemoDemo" Width="40" Margin="-20 0" Opacity="0" Fill="Yellow" HorizontalAlignment="Left" ManipulationMode="TranslateX"  ManipulationCompleted="DemoDemo_ManipulationCompleted">
+        <Rectangle x:Name="DemoDemo" Width="28" Margin="-20 0" Opacity="0" Fill="Yellow" HorizontalAlignment="Left" ManipulationMode="TranslateX"  ManipulationCompleted="DemoDemo_ManipulationCompleted">
             <Rectangle.RenderTransform>
                 <TranslateTransform x:Name="Demo" />
             </Rectangle.RenderTransform>
