--- a/Demo_Test/Main.xaml
+++ b/Demo_Test/Main.xaml
@@ -136,7 +136,7 @@
                             <RowDefinition Height="*"/>
                         </Grid.RowDefinitions>
                         <Grid Grid.Row="1">
-                            <ProgressBar x:Name="bar" Foreground="#36C3F1" IsIndeterminate="True" VerticalAlignment="Top" />
+                            <!--<ProgressBar x:Name="bar" Foreground="#36C3F1" IsIndeterminate="True" VerticalAlignment="Top" />-->
                             <Viewbox Height="40" Width="80">
                                 <ProgressRing x:Name="ring" Foreground="#36C3F1" IsActive="True" />
                             </Viewbox>
