--- a/Demo_Test/OneMain.xaml
+++ b/Demo_Test/OneMain.xaml
@@ -168,30 +168,33 @@
                                         <TextBlock Text="{Binding Path=PageDataBinding.Vol}" HorizontalAlignment="Left"  Foreground="{Binding ThemeColorModel.FontColor}" />
                                     </StackPanel>
                                     <StackPanel HorizontalAlignment="Right">
-                                        <TextBlock FontFamily="CoNsolas" Margin="2 2" Foreground="#36C3F1" VerticalAlignment="Top" HorizontalAlignment="Right" Grid.Row="0" Text="{Binding PageDataBinding.HeaderString}" FontSize="15" TextWrapping="Wrap" />
-                                        <TextBlock  Foreground="{Binding ThemeColorModel.FontColor}"  x:Name="txtByWho" FontFamily="CoNsolas" Margin="2 3" HorizontalAlignment="Right" Grid.Row="1" Text="{Binding PageDataBinding.ByWho}" TextWrapping="Wrap"  FontSize="12"/>
+                                        <TextBlock FontFamily="CoNsolas" Margin="5" Foreground="#36C3F1" VerticalAlignment="Top" HorizontalAlignment="Right" Grid.Row="0" Text="{Binding PageDataBinding.ByWho}" FontSize="15" TextWrapping="Wrap" />
+                                        <!--<TextBlock  Foreground="{Binding ThemeColorModel.FontColor}"  x:Name="txtByWho" FontFamily="CoNsolas" Margin="2 3" HorizontalAlignment="Right" Grid.Row="1" Text="{Binding PageDataBinding.ByWho}" TextWrapping="Wrap"  FontSize="12"/>-->
+
                                     </StackPanel>
                                 </Grid>
                             </Grid>
-                            <StackPanel>
-                                <Grid>
-                                    <Button Margin="-2 2" x:Name="Love" Click="Love_Click">
-                                        <Button.Template>
-                                            <ControlTemplate>
-                                                <Border Background="{Binding ThemeColorModel.OneMainBodyBackgroundColor}" BorderBrush="SkyBlue" HorizontalAlignment="Left"  BorderThickness="1" CornerRadius="0 12 12 0" Margin="0 3">
-                                                    <StackPanel Margin="3" Orientation="Horizontal">
+                            <Grid>
+                                <Button HorizontalAlignment="Right" Margin="-2 -7 -2 0" x:Name="Love" Click="Love_Click">
+                                    <Button.Template>
+                                        <ControlTemplate>
+                                            <Border Background="{Binding ThemeColorModel.OneMainBodyBackgroundColor}" BorderBrush="SkyBlue" HorizontalAlignment="Right"  BorderThickness="1" CornerRadius="12 0 0 12" Margin="0 3">
+                                                <StackPanel Margin="3" Orientation="Horizontal">
+                                                    <FontIcon Margin="2" Glyph="&#xE00B;"  FontFamily="Segoe MDL2 Assets"/>
+                                                    <TextBlock Foreground="{Binding ThemeColorModel.FontColor}" Text="{Binding PageDataBinding.PraiseName}" />
 
-                                                        <TextBlock Foreground="{Binding ThemeColorModel.FontColor}" Text="{Binding PageDataBinding.PraiseName}" />
-                                                        <FontIcon Margin="2" Glyph="&#xE00B;"  FontFamily="Segoe MDL2 Assets"/>
-                                                    </StackPanel>
-                                                </Border>
-                                            </ControlTemplate>
-                                        </Button.Template>
-                                    </Button>
-                                    <TextBlock Margin="0" Foreground="Gray" FontSize="54" HorizontalAlignment="Center"  VerticalAlignment="Bottom" Text="{Binding PageDataBinding.OneDay}" />
-                                </Grid>
-                                <TextBlock Foreground="Black" HorizontalAlignment="Center" VerticalAlignment="Top" FontFamily="CoNsolas" Text="{Binding PageDataBinding.OneMonthAndYear}"/>
-                            </StackPanel>
+                                                </StackPanel>
+                                            </Border>
+                                        </ControlTemplate>
+                                    </Button.Template>
+                                </Button>
+                                <StackPanel>
+                                    <Grid>
+                                        <TextBlock Margin="0" Foreground="Gray" FontSize="54" HorizontalAlignment="Center" VerticalAlignment="Bottom" Text="{Binding PageDataBinding.OneDay}" />
+                                    </Grid>
+                                    <TextBlock Foreground="Black" HorizontalAlignment="Center" VerticalAlignment="Top" FontFamily="CoNsolas" Text="{Binding PageDataBinding.OneMonthAndYear}"/>
+                                </StackPanel>
+                            </Grid>
                             <Border Height="{Binding ElementName=border,Path=Height}"/>
                             <StackPanel>
                                 <Border Background="#252526" Width="320" HorizontalAlignment="Center" Height="1.2" BorderThickness=".5" Margin="12"/>
